version 0.99.3 - 00-May-2010
 . [NEW] Scheduler: supports pause/resume/'update' with priority (issue #439)
 . [NEW] Node: added removeAndCleanupFromParent (issue #566)
 . [FIX] Grid: Fixed memory leak (issue #853)
 . [FIX] Particles: Removed unnecesary assert (issue #851)
 . [FIX] Scheduler: Improved performance (issue #492)
 . [FIX] Templates: templates can be installed in user directory (issue #856)
 
version 0.99.2 - 28-Apr-2010
 . [FIX] ActionManager: removeByTag doesn't crash if action is also running (issue #841)
 . [FIX] cocos2d/*.m: fixed several memory leaks in cases where initXXX failed (issue #XXX)
 . [FIX] Director: fixed start-up flicker (issue #350)
 . [FIX] EAGLView: If discard-framebuffer is supported and using depthBuffer, then discard it before swapping (SDK4.0 only) (issue #XXX)
 . [FIX] Grid: simplied code, easier to maintain, added support for flipped textures (part of issue #448)
 . [FIX] Sprite/SpriteSheet: reorderChild works as expected when using subchildren (issue #767)
 . [FIX] Templates: installer has better error messages and checks the installer conditions in a better way (issue #842)
 . [FIX] Xcode: compiles OK with LLVM Compiler SDK 4.0beta2
 . [3RD] Box2d: Updatd to SVN r100 (v2.1.2)

version 0.99.2-rc - 15-Apr-2010
 . [NEW] Actions: Added blocks actions via PLBlocks: CCCallBlock and CCCallBlockN (issue #699)
 . [NEW] Actions: Added CCFollow, an action that follows a CCNode (issue #738)
 . [NEW] Actions: Added CCPropertyAction, a generic way to update properties using an action (issue #491)
 . [NEW] MenuItem: MenuItems supports blocks via PLBlocks (issue #699)
 . [NEW] Texture2D: added support for NPOT textures where available (issue #818)
 . [NEW] Templates: file templates for CCLayer, CCNode, CCSprite (issue #XXX)
 . [NEW] TMXMaps: added support for per-tile properties (issue #606)
 . [NEW] ProfilingTimer: new class to test performance (issue #724)
 . [NEW] Xcode: added "build all tests" target (issue #XXX)